2008-01-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-create-window-system-frame): Remove workaround for
	a bug that has been fixed.

2008-01-03  Magnus Henoch  <magnus@zemdatav>

	* net/dbus.el (dbus-name-owner-changed-handler):
	Use dbus-unregister-object instead of dbus-unregister-signal.

2008-01-03  Drew Adams  <drew.adams@oracle.com>

	* frame.el (frame-geom-value-cons, frame-geom-spec-cons): New fns.

2008-01-03  Richard Stallman  <rms@gnu.org>

	* replace.el (occur-context-lines): New subroutine,
	broken out of occur-engine.
	(occur-engine): Call it.

2008-01-03  Alexandre Julliard  <julliard@winehq.org>

	* vc-git.el (vc-git--ls-files-state): New function.
	(vc-git-dir-state): Use it instead of processing the status
	results here.

2008-01-02  Eric S. Raymond  <esr@snark.thyrsus.com>

	* progmodes/grep.el (grep-find-ignored-directories):
	Initialize from the value of vc-directory-exclusion-list.

	* vc-hooks (vc-directory-exclusion-list):  Include "_darcs",
	even though we don't have a back end for darcs yet.

2008-01-02  Karl Fogel  <kfogel@red-bean.com>

	Change a return type, for greater extensibility.  See
	http://lists.gnu.org/archive/html/emacs-devel/2007-12/msg01077.html
	and its thread for discussion leading to this change.

	* emacs-cvs/lisp/bookmark.el:
	(bookmark-jump-noselect): Return an alist instead of a dotted pair.
	(bookmark-jump, bookmark-jump-other-window, bookmark-insert)
	(bookmark-bmenu-2-window, bookmark-bmenu-other-window)
	(bookmark-bmenu-switch-other-window): Adjust accordingly.
	(bookmark-make-cell-function): Adjust documentation accordingly.

	* emacs-cvs/lisp/image-mode.el
	(image-bookmark-jump): Adjust return type accordingly; document.

	* emacs-cvs/lisp/doc-view.el
	(doc-view-bookmark-jump): Adjust return type accordingly; document.

2008-01-02  Miles Bader  <miles@gnu.org>

	* net/rcirc.el (rcirc-log-filename-function): New variable.
	(rcirc-log): Use `rcirc-log-filename-function' to generate the